# nanocompore

./: .gitignore  .travis.yml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Data_DB_manager.py  Eventalign_DB.py  LICENCE  LICENSE  README.md  SampComp.py  Sample.py  TranscriptObject.py  TxComp.py  Whitelist.py  __main__.py  helper_prev_dwell.py  index.html  main.py  mkdocs.yml  nanocompore.py  objects.inv  pyproject.toml  setup.py  sitemap.xml  test_code.py  txCompare.py
.github/: CODEOWNERS
alternative/: index.html
changelog/: index.html
citing/: index.html
code_of_conduct/: index.html
contributing/: index.html
data_api/: index.html
data_preparation/: index.html
demo/: SampCompDB_usage.ipynb  SampComp_usage.ipynb  SimReads_usage.ipynb  samples.yaml
demo/Eventalign_collapse_usage/: index.html
demo/SampCompDB_usage/: index.html
demo/SampComp_usage/: index.html
demo/SimReads_usage/: index.html
demo/eventalign_files/simulated/: modified_rep_1_pos.tsv
demo/eventalign_files/yeast/: KO_1eventalign_collapsed.tsv.idx
demo/results/: out.tsv  out.tsv.idx  out_pos.tsv  simulated_report.tsv  simulated_shift.tsv  simulated_testSampComp.db
docs/: CNAME  alternative.md  api.md  changelog.md  citing.md  contributing.md  data_api.md  data_preparation.md  index.md  installation.md  licence.md  nanocompore_usage.ipynb  output.md  plot_usage.md  plotting.md  plotting_api.md  sampcomp_usage.md  sampcompdb_usage.md  simulate_reads_usage.md  troubleshooting.md  usage.md
docs/data/eventalign/: KO_2_eventalign_collapsed.tsv.idx  WT_1_eventalign_collapsed.tsv.idx  WT_2_eventalign_collapsed.tsv.idx
docs/demo/: Eventalign_collapse_usage.ipynb  SamComp_API_demo.ipynb  SamComp_API_demo.md  SampCompDB_demo.ipynb  SampCompDB_usage.ipynb  SampComp_demo.ipynb  SampComp_usage.ipynb  SimReads_demo.ipynb  SimReads_usage.ipynb  samples.yaml
docs/demo/eventalign_files/simulated/: modified_rep_1.tsv  modified_rep_1.tsv.idx  modified_rep_2.tsv  modified_rep_2.tsv.idx  unmodified_rep_1.tsv  unmodified_rep_1.tsv.idx  unmodified_rep_2.tsv  unmodified_rep_2.tsv.idx
docs/demo/references/simulated/: ref.fa  ref.fa.fai
docs/demo/results/: out.db
docs/demo/sample_files/: modified_pos.tsv  modified_rep_1.tsv  modified_rep_1.tsv.idx  modified_rep_2.tsv  modified_rep_2.tsv.idx  unmodified_rep_1.tsv  unmodified_rep_1.tsv.idx  unmodified_rep_1_pos.tsv  unmodified_rep_2.tsv  unmodified_rep_2.tsv.idx
installation/: index.html
licence/: index.html
models/: kmers_model_RNA_r9.4_180mv.tsv
nanocompore/: Config.py  DataStore.py  Data_DB_manager.py  DatabaseWrapper.py  Eventalign_DB.py  Eventalign_collapse.py  Experiment.py  NanocomporeError.py  PostProcess.py  README.md  Remora.py  SampComp.py  SampCompDB.py  SampCompResultsmanager.py  SampComp_SQLDB.py  Sample.py  SimReads.py  Simulator.py  SuperParser.py  Transcript.py  TranscriptObject.py  TxComp.py  Whitelist.py  __init__.py  __main__.py  api.py  batch_comp.py  common.py  comparisons.py  config.py  database.py  eventalign_collapse.py  gmm_statistics.py  gmm_test.py  gmm_testing_pom.py  gof_tests.py  helper_lib.py  kmer.py  models.py  nanocompore_main.py  (+18 more)
nanocompore/models/: kmers_model_RNA_r9.4_180mv.tsv  rna002_5mer_levels_v1.txt
output/: index.html
plotting/: index.html
plotting_api/: index.html
scripts/: add_genomic_coords.py  compare_pair.py  test_coverage.sh
search/: search_index.json
tests/: common.py  nanocompore_dev.ipynb  nanocompore_tests.ipynb  nanocompore_usage.ipynb  test_Integration.py  test_LargeDataset.py  test_SampCompDB.py  test_TranscriptObject.py  test_TxComp.py  test_Whitelist.py  test_code.py  test_common.py  test_comparisons.py  test_config.py  test_eventalign_collapse.py  test_integration.py  test_main.py  test_postprocessing.py  test_preprocessing.py  test_run.py  test_uncalled4.py  test_whitelist.py
tests/__pycache__/: test_whitelist_functions.py
tests/data/: Yeast_transcriptome.fa.fai  collapsed_nanopolish.tsv  collapsed_nanopolish.tsv.idx  collapsed_nanopolish_index.tsv  collapsed_nanopolish_index.tsv.idx  collapsed_nanopolish_samples.tsv.idx  nanopolish_collapsed_reads.tsv  nanopolish_collapsed_reads.tsv.idx
tests/data/KO/: eventalign_collapsed.tsv.idx
tests/data/WT/: eventalign_collapsed.tsv.idx
tests/fixtures/: empty.bam  empty.bam.bai  kd1.bam  kd1.bam.bai  kd1.pod5  kd1_eventalign.db  kd1_eventalign.tsv  kd2.bam  kd2.bam.bai  kd2.pod5  kd2_eventalign.db  kd2_eventalign.tsv  out_sampComp_sql.db  test_annotation.gtf  test_reference.fa  test_reference.fa.fai  uncalled4_reference.fa  uncalled4_reference.fa.fai  uncalled4_sample.bam  uncalled4_sample.bam.bai  wt1.bam  wt1.bam.bai  wt1.pod5  wt1_eventalign.db  wt1_eventalign.tsv  wt2.bam  wt2.bam.bai  wt2.pod5  wt2_eventalign.db  wt2_eventalign.tsv
tests/output/: out.db  out.db.dir  out_stats.db.dir  whitelist.bed
troubleshooting/: index.html
usage/: index.html
(+2 files in other folders)
