[tool.poetry]
name = "nanocompore"
version = "1.0.4.dev"
description = "Software package that identifies raw signal changes between two conditions from https://github.com/jts/nanopolish resquiggled dRNA-Seq data."
authors = ["Tommaso Leonardi <tom@itm6.xyz>", "Adrien Leger <aleg@ebi.ac.uk>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/tleonardi/nanocompore"
documentation = "http://nanocompore.rna.rocks"
classifiers = [
        'Development Status :: 4 - Beta',
        'Intended Audience :: Science/Research',
        'Topic :: Scientific/Engineering :: Bio-Informatics',
        'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
        'Programming Language :: Python :: 3'
]
include = ["nanocompore/models/kmers_model_RNA_r9.4_180mv.tsv"]

[tool.poetry.scripts]
nanocompore = 'nanocompore.__main__:main'


[tool.poetry.dependencies]
python = ">=3.6.1"
numpy = "~1.19"
scipy = "~1.5"
tqdm = "~4"
pyfaidx = "~0.5"
matplotlib = "~3.1"
seaborn = "~0"
pandas = "~1"
statsmodels = "~0.12"
scikit-learn = "~0.23"
bedparse = "~0.2"
pyyaml = "~5"
loguru = "~0.5"

[tool.poetry.dev-dependencies]
pytest = "~4"
nbconvert = "~5"
mkdocs = "~1"
pymdown-extensions = "~6"
mknotebooks = "~0"
mkdocs-material = "~4"
markdown = "<3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
